src_old/objects/JobMaterial__c.object
<CustomObject>
    <description>Job Material is a helper object that stores tracking information and other Job specific information about Material needed to perform a Job.</description>
    <fields>
        <fullName>Carrier__c</fullName>
        <label>Carrier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobName__c</fullName>
        <formula>Job__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JobName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <label>Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Job Materials</relationshipLabel>
        <relationshipName>Job_Materials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>KitMaterial__c</fullName>
        <formula>Material__r.Kit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kit Material</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaterialExternalId__c</fullName>
        <formula>Material__r.ExternalId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Material External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaterialName__c</fullName>
        <formula>Material__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Material Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaterialQuantity__c</fullName>
        <formula>ProjectServiceMaterial__r.Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Material Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Material</label>
        <referenceTo>Material__c</referenceTo>
        <relationshipLabel>Job Materials</relationshipLabel>
        <relationshipName>Job_Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectServiceMaterial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Service Material</label>
        <referenceTo>ProjectServiceMaterial__c</referenceTo>
        <relationshipLabel>Job Materials</relationshipLabel>
        <relationshipName>Job_Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShippedToAddress2__c</fullName>
        <label>ShippedTo Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippedToAddress__c</fullName>
        <label>ShippedTo Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippedToCity__c</fullName>
        <label>ShippedTo City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippedToContactId__c</fullName>
        <label>ShippedTo Contact Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippedToCountry__c</fullName>
        <label>ShippedTo Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippedToEmployeeId__c</fullName>
        <label>ShippedTo Employee Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippedToFirstName__c</fullName>
        <label>ShippedTo First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippedToLastName__c</fullName>
        <label>ShippedTo Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippedToPostalCode__c</fullName>
        <label>ShippedTo PostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippedToState__c</fullName>
        <label>ShippedTo State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Job Material</label>
    <nameField>
        <displayFormat>JM-{000000000}</displayFormat>
        <label>Job Material Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Materials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>